<resources>
    <string name="author" >Ryan Radmore (radm0018)</string>
    <string name="app_name">HiLo</string>
    <string name="image">A sassy pineapple</string>
    <string name="resetBtn">Reset</string>
    <string name="guessBtn">Guess</string>
    <string name="guessHint">Enter Your Guess Here</string>
    <string name="action_about">About</string>
    <string name="gameInstruction">Guess a number between 1-1000</string>


</resources>
