<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.radm0018algonquincollege.hilo.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <ImageView
        android:id="@+id/AppLogo"
        android:layout_width="324dp"
        android:layout_height="283dp"
        android:contentDescription="@string/image"
        android:src="@mipmap/ic_pineguy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="79dp"
        tools:layout_editor_absoluteY="11dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameInstruction"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/GuessInput"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="25dp" />

    <EditText
        android:id="@+id/GuessInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/guessHint"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/GuessButton"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="19dp" />

    <Button
        android:id="@+id/GuessButton"
        android:layout_width="314dp"
        android:layout_height="57dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/guessBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="77dp"
        tools:layout_editor_absoluteY="469dp" />

    <Button
        android:id="@+id/ResetButton"
        android:layout_width="314dp"
        android:layout_height="57dp"
        android:layout_marginBottom="17dp"
        android:layout_marginTop="9dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/resetBtn"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GuessButton"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_editor_absoluteY="524dp" />

    <TextView
        android:id="@+id/attemptsText"
        android:layout_width="107dp"
        android:layout_height="28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/AppLogo"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="20dp" />
</android.support.constraint.ConstraintLayout>
